[gd_scene load_steps=8 format=3 uid="uid://c2x1vf5wh7hr8"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_8yafj"]
[ext_resource type="Texture2D" uid="uid://cyl5ou74o5epx" path="res://Images/UI board Large  stone.png" id="2_lxddo"]
[ext_resource type="Texture2D" uid="uid://y0u768d3d1ja" path="res://Images/UI board Large  parchment.png" id="3_u41kw"]
[ext_resource type="PackedScene" uid="uid://c1l88v70ir6ui" path="res://Scenes/big_button.tscn" id="4_8w1r4"]
[ext_resource type="Texture2D" uid="uid://cdimxm8almcha" path="res://Images/IRONY TITLE  Large.png" id="8_2q2wb"]
[ext_resource type="FontFile" uid="uid://cs63ql10bief" path="res://Fonts/buddychampionrotate.ttf" id="9_cvlqq"]
[ext_resource type="AudioStream" uid="uid://dcjr1dj27vm7c" path="res://Sounds/Music/Holiday Weasel.mp3" id="10_lpk2g"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yafj")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2.08667, 1.74313)
texture = ExtResource("2_lxddo")
centered = false

[node name="PaperControl" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/PaperControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Paper" type="Sprite2D" parent="Background/PaperControl/MarginContainer"]
position = Vector2(29.7224, 27.6169)
texture = ExtResource("3_u41kw")
centered = false

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.641
anchor_right = 0.873
anchor_bottom = 0.82
offset_left = -0.00900269
offset_top = -0.0749512
offset_right = -1.28711
offset_bottom = -80.5
theme_override_constants/separation = 20
alignment = 1

[node name="Start" parent="ButtonContainer" instance=ExtResource("4_8w1r4")]
layout_mode = 2
text = "Start"

[node name="Options" parent="ButtonContainer" instance=ExtResource("4_8w1r4")]
layout_mode = 2
text = "Options"

[node name="Credits" parent="ButtonContainer" instance=ExtResource("4_8w1r4")]
layout_mode = 2
text = "Credits"

[node name="Quit" parent="ButtonContainer" instance=ExtResource("4_8w1r4")]
layout_mode = 2
text = "Quit"

[node name="TitleBackground" type="Sprite2D" parent="."]
position = Vector2(948, 370)
scale = Vector2(2.32569, 2.32569)
texture = ExtResource("8_2q2wb")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214
anchor_top = 0.243
anchor_right = 0.775
anchor_bottom = 0.444
offset_left = 1.33398
offset_top = 7.77499
offset_right = -4.22498
offset_bottom = 0.699982
theme_override_fonts/font = ExtResource("9_cvlqq")
theme_override_font_sizes/font_size = 192
text = "PIG ONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_lpk2g")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ButtonContainer/Quit" to="." method="_on_quit_pressed"]
